--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-HELLO
 
-</body>
-</html>
+{% block content %}
+<div class="row">
+    <div class="col">
+        PUJ ABUSER
+    </div>
+</div>
+{% endblock content %}
