--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
     <div class="col">
-        PUJ ABUSER
+        <h1>Welcome to my project "currency"</h1>
     </div>
 </div>
 {% endblock content %}
