--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -11,7 +11,8 @@
           Menu
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/rate/show">Rates</a>
+          <a class="dropdown-item" href="{% url 'rate:show-rates' %}">Rates</a>
+          <a class="dropdown-item" href="{% url 'rate:latest-rates' %}">Latest rates</a>
           <a class="dropdown-item" href="#">Contact Us</a>
           <div class="dropdown-divider"></div>
             {% if request.user.is_authenticated %}
