--- a/src/rate/templates/latest-ratest.html
+++ b/src/rate/templates/latest-ratest.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Latest Rates {% endblock title%}
+
 {% block content %}
 <table class="table table-striped">
     <tr>
