--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} 404 {% endblock title %}
+
 {% block content %}
 <h1 align="center">404 Page not found</h1>
 {% endblock content %}
