--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,12 +13,13 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{% url 'rate:show-rates' %}">Rates</a>
           <a class="dropdown-item" href="{% url 'rate:latest-rates' %}">Latest rates</a>
-          <a class="dropdown-item" href="#">Contact Us</a>
+          <a class="dropdown-item" href="{% url 'account:contact-us' %}">Contact Us</a>
           <div class="dropdown-divider"></div>
             {% if request.user.is_authenticated %}
-                <a class="dropdown-item" href="#">Logout</a>
+                <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
+                <a class="dropdown-item" href="{% url 'account:profile' %}">My profile</a>
             {% else %}
-                <a class="dropdown-item" href="#">Login</a>
+                <a class="dropdown-item" href="{% url 'account:login' %}">Login</a>
                 <a class="dropdown-item" href="#">Sign Up</a>
             {% endif %}
 
